[package]
edition = "2021"
name = "hws"
version = "0.1.0"

[dependencies]
actix-cors = "0.6"
actix-files = "0.6"
actix-web = { version = "4", features = ["openssl"] }
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.16"
openssl = { version = "0.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "postgres", "decimal"] }
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }